# Sakaar

./: .gitmodules  CMakeLists.txt  main.c
include/: sakaar.h
include/sakaar/: account.h  account_connections.h  activated_accounts.h  block.h  block_history.h  block_smart.h  config.h  currency.h  generation.h  pre_transaction.h  transaction.h  wallet.h  wallet_data.h  wallet_smart.h
src/sakaar/: account.c  account_connections.c  activated_accounts.c  block.c  block_check.c  block_history.c  block_smart.c  config.c  currency.c  generation.c  pre_transaction.c  transaction.c  wallet.c  wallet_data.c  wallet_smart.c
src/sakaar/block_smart/: account_activate.c  account_create.c  account_deactivate.c  account_freeze.c  currency_create.c  wallet_connect.c  wallet_disconnect.c
src/sakaar/generation/: account_username.c  block_create.c  block_result.c  wallet_create.c
